<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">com.cmpe277.assgn4</string>
    <string name="action_settings">Settings</string>
    <string name="personalInfo">Personal Info</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="address">Address</string>
    <string name="creditCard">Credit Card Number</string>
    <string name="processData">Process Data</string>
    <string name="saveData">Save Data</string>
    <string name="reportData">Report Data</string>
    <string name="close">Close</string>
    <string name="title_activity_processing">Processing</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="completeProcess">Complete Process</string>
    <string name="title_activity_persistence">Persistence</string>
    <string name="sqlLite">SQL Lite</string>
    <string name="sharedPreferences">Shared Preferences</string>
    <string name="title_activity_report_data">Report Data</string>
    <string name="dataSource">Current Selected \n Data Source:</string>
    
</resources>
