<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Processing" >

    <EditText
        android:id="@+id/edtData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLines="10"
        android:minLines="3"
        android:scrollbars="vertical" >
    </EditText>

    <ProgressBar
        android:id="@+id/pgBProcessing"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtData"
        android:layout_below="@+id/edtData"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="22dp" />

    <RadioGroup
        android:id="@+id/rdgResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pgBProcessing"
        android:layout_below="@+id/pgBProcessing"
        android:layout_marginTop="44dp" >

        <RadioButton
            android:id="@+id/rdSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/success" />

        <RadioButton
            android:id="@+id/rdError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error" />
    </RadioGroup>

    <Button
        android:id="@+id/btnComplete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtData"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:background="#3333FF"
        android:gravity="center"
        android:text="@string/completeProcess"
        android:textColor="#ffffff" />

</RelativeLayout>